[tool.poetry]
name = "chunksum"
version = "0.2.0"
description = "Print FastCDC rolling hash chunks and checksums."
authors = ["Xie Yanbo <xieyanbo@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xyb/chunksum"
repository = "https://github.com/xyb/chunksum"
classifiers = [
    "Environment :: Console",
    "Development Status :: 3 - Alpha",
    "Topic :: Utilities",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/xyb/chunksum/issues"

[tool.poetry.scripts]
chunksum = 'chunksum.chunksum:main'

[tool.poetry.dependencies]
python = "^3.7"
fastcdc = "^1.4.2"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
autoflake = "^1.7.7"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
