[tool.poetry]
name = "chunksum"
version = "0.3.0"
description = "Print FastCDC rolling hash chunks and checksums."
authors = ["Xie Yanbo <xieyanbo@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xyb/chunksum"
repository = "https://github.com/xyb/chunksum"
classifiers = [
    "Environment :: Console",
    "Development Status :: 3 - Alpha",
    "Topic :: Utilities",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/xyb/chunksum/issues"

[tool.poetry.scripts]
chunksum = 'chunksum.chunksum:main'

[tool.poetry.dependencies]
python = "^3.7"
fastcdc = "^1.4.2"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
